feat: REST for sqlite
