# docs/swagger.json
@@ -9,7 +9,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:4000",
+    "host": "localhost:5522",
     "basePath": "/",
     "paths": {
         "/": {
@@ -33,6 +33,7 @@
         },
         "/databases": {
             "get": {
+                "description": "list databases",
                 "produces": [
                     "application/json"
                 ],
@@ -43,30 +44,38 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/routes.HandleListDatabasesResult"
+                            "$ref": "#/definitions/models.ListDatabasesResult"
                         }
                     }
                 }
             },
             "post": {
-                "description": "create database",
+                "description": "create pg/mysql database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Databases"
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "database name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
+                        "description": "only supported for pg and mysql, because attached sqlite dbs are temporary",
+                        "name": "pgMysqlDatabaseData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreatePgMySqlDBPayload"
+                        }
                     }
                 ],
                 "responses": {
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/routes.HandleCreateDatabaseResult"
+                            "$ref": "#/definitions/models.CreateDatabaseResult"
                         }
                     }
                 }
@@ -114,7 +123,6 @@
             "put": {
                 "description": "update table",
                 "consumes": [
-                    "application/json",
                     "application/json"
                 ],
                 "produces": [
@@ -264,6 +272,36 @@
                 }
             }
         },
+        "models.CreateDatabaseResult": {
+            "type": "object",
+            "properties": {
+                "created": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.CreatePgMySqlDBPayload": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ListDatabasesResult": {
+            "type": "object",
+            "properties": {
+                "databases": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "routes.APIInfoResult": {
             "type": "object",
             "properties": {
@@ -281,14 +319,6 @@
                 }
             }
         },
-        "routes.HandleCreateDatabaseResult": {
-            "type": "object",
-            "properties": {
-                "created": {
-                    "type": "integer"
-                }
-            }
-        },
         "routes.HandleCreateTableBody": {
             "type": "object",
             "properties": {
@@ -302,17 +332,6 @@
             "properties": {
                 "created": {
                     "type": "string"
-                }
-            }
-        },
-        "routes.HandleListDatabasesResult": {
-            "type": "object",
-            "properties": {
-                "databases": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
