# internal/rest/databaseRoutes.go
@@ -1,9 +1,9 @@
 package routes
 
 import (
-	_ "meta-x/docs"
 	db_handlers "meta-x/internal/db"
 	"meta-x/lib"
+	"meta-x/models"
 	"meta-x/utils"
 
 	"github.com/gofiber/fiber/v2"
@@ -13,42 +13,58 @@ import (
 func RegisterDatabasesRoutes(app *fiber.App, db *sqlx.DB) {
 	dbGroup := app.Group("databases")
 	dbGroup.Get("", utils.RouteHandler(db, handleListDatabases))
-	dbGroup.Post("/:name", utils.RouteHandler(db, handlerCreateDatabase))
-}
-
-type HandleListDatabasesResult struct {
-	Databases []string
+	dbGroup.Post("/", utils.RouteHandler(db, handleCreateDatabase))
 }
 
 // Lists databases
 //
-//	@tags		Databases
-//	@decription	list databases
-//	@router		/databases [get]
-//	@produce	json
-//	@success	200	{object}	HandleListDatabasesResult
+//	@tags			Databases
+//	@description	list databases
+//	@router			/databases [get]
+//	@produce		json
+//	@success		200	{object}	models.ListDatabasesResult
 func handleListDatabases(c *fiber.Ctx, db *sqlx.DB) error {
-	dbs, err := db_handlers.ListDatabases(db)
+	var dbs any
+	var err error
+
+	provider := c.Locals("provider")
+
+	switch c.Locals("provider") {
+	case lib.SQLITE3:
+		dbs, err = db_handlers.ListDatabasesSqlite(db)
+	case lib.PSQL:
+	case lib.MYSQL:
+		dbs, err = db_handlers.ListDatabasesPgMySQL(db, provider.(string))
+	}
+
 	if err != nil {
 		return c.JSON(lib.ResponseError500(err.Error()))
 	}
 	return c.JSON(fiber.Map{"databases": dbs})
 }
 
-type HandleCreateDatabaseResult struct {
-	Created int
-}
-
-// Creates database
+// Creates new pg/mysql database
 //
 //	@tags			Databases
-//	@description	create database
+//	@description	create pg/mysql database
 //	@router			/databases [post]
-//	@param			name	path	string	true	"database name"
-//	@prduce			json
-//	@success		201	{object}	HandleCreateDatabaseResult
-func handlerCreateDatabase(c *fiber.Ctx, db *sqlx.DB) error {
-	rowsAffected, err := db_handlers.CreateDatabase(db, c.Params("name"))
+//	@produce		json
+//	@accept			json
+//	@param			pgMysqlDatabaseData	body		models.CreatePgMySqlDBPayload	true	"only supported for pg and mysql, because attached sqlite dbs are temporary"
+//	@success		201					{object}	models.CreateDatabaseResult
+func handleCreateDatabase(c *fiber.Ctx, db *sqlx.DB) error {
+	payload := new(models.CreatePgMySqlDBPayload)
+
+	if err := c.BodyParser(payload); err != nil {
+		return c.JSON(lib.ResponseError400(err))
+	}
+
+	if err := lib.ValidateStruct(payload); err != nil {
+		return c.JSON(lib.ResponseError400(err))
+	}
+
+	rowsAffected, err := db_handlers.CreatePgMysqlDatabase(db, payload.Name)
+
 	if err != nil {
 		return c.Status(500).JSON(fiber.Map{"error": err})
 	}
